--- a/index.html
+++ b/index.html
@@ -77,8 +77,10 @@
             </div>
 
             <div class="image-wrapper">
-                <img src="images/berries-400w.jpg" alt="berries" width="400" height="300">
-                <figcaption>Berries</figcaption>
+                <figure>
+                    <img src="images/berries-400w.jpg" alt="berries" width="400" height="300">
+                    <figcaption>Berries</figcaption>
+                </figure>
             </div>
 
         </article>
@@ -93,8 +95,10 @@
                 <a class="button">Learn More</a>
             </div>
             <div class="image-wrapper left">
+                <figure></figure>
                 <img src="images/shoesinpark-400w.jpg" alt="day in the park" width="400" height="299">
                 <figcaption>Day in the park</figcaption>
+                </figure>
             </div>
         </article>
     </main>
@@ -140,14 +144,16 @@
 
 </body>
 
-<svg class="hidden">
-    <symbol id="menu-icon" viewbox="0 0 120 120" width="40px" height="40px">
-        <line x1="5%" x2="95%" y1="25%" y2="25%" stroke="#1193b2" stroke-width="10" stroke-linecap="round" />
+<div class="hidden">
+    <svg>
+        <symbol id="menu-icon" viewbox="0 0 120 120" width="40px" height="40px">
+            <line x1="5%" x2="95%" y1="25%" y2="25%" stroke="#1193b2" stroke-width="10" stroke-linecap="round" />
 
-        <line x1="5%" x2="95%" y1="50%" y2="50%" stroke="#e14c06" stroke-width="10" stroke-linecap="round" />
+            <line x1="5%" x2="95%" y1="50%" y2="50%" stroke="#e14c06" stroke-width="10" stroke-linecap="round" />
 
-        <line x1="5%" x2="95%" y1="75%" y2="75%" stroke="#003f4f" stroke-width="10" stroke-linecap="round" />
-    </symbol>
-</svg>
+            <line x1="5%" x2="95%" y1="75%" y2="75%" stroke="#003f4f" stroke-width="10" stroke-linecap="round" />
+        </symbol>
+    </svg>
+</div>
 
 </html>
