--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <svg class="menu-icon-svg">
                 <use href="#menu-icon" />
             </svg>
-            <nav>
+            <nav class="page-links">
                 <ul class="navbutton">
                     <li><a class="current-page">Home</a></li>
                     <li><a href="about/">About</a></li>
