--- a/index.html
+++ b/index.html
@@ -95,9 +95,9 @@
                 <a class="button">Learn More</a>
             </div>
             <div class="image-wrapper left">
-                <figure></figure>
-                <img src="images/shoesinpark-400w.jpg" alt="day in the park" width="400" height="299">
-                <figcaption>Day in the park</figcaption>
+                <figure>
+                    <img src="images/shoesinpark-400w.jpg" alt="day in the park" width="400" height="299">
+                    <figcaption>Day in the park</figcaption>
                 </figure>
             </div>
         </article>
@@ -142,18 +142,18 @@
         <p>Here is a paragraph to go into my footer. One day it will be more professional.</p>
     </footer>
 
+    <div class="hidden">
+        <svg>
+            <symbol id="menu-icon" viewbox="0 0 120 120" width="40px" height="40px">
+                <line x1="5%" x2="95%" y1="25%" y2="25%" stroke="#1193b2" stroke-width="10" stroke-linecap="round" />
+
+                <line x1="5%" x2="95%" y1="50%" y2="50%" stroke="#e14c06" stroke-width="10" stroke-linecap="round" />
+
+                <line x1="5%" x2="95%" y1="75%" y2="75%" stroke="#003f4f" stroke-width="10" stroke-linecap="round" />
+            </symbol>
+        </svg>
+    </div>
 </body>
 
-<div class="hidden">
-    <svg>
-        <symbol id="menu-icon" viewbox="0 0 120 120" width="40px" height="40px">
-            <line x1="5%" x2="95%" y1="25%" y2="25%" stroke="#1193b2" stroke-width="10" stroke-linecap="round" />
-
-            <line x1="5%" x2="95%" y1="50%" y2="50%" stroke="#e14c06" stroke-width="10" stroke-linecap="round" />
-
-            <line x1="5%" x2="95%" y1="75%" y2="75%" stroke="#003f4f" stroke-width="10" stroke-linecap="round" />
-        </symbol>
-    </svg>
-</div>
 
 </html>
